# ProteinGym

./: .gitignore  LICENSE  README.md  assays.bib  config.json  setup.py
environments/: protein_fitness_prediction_hsu.txt  proteingym_env.txt
notebooks/: TranceptEVE_example.ipynb
proteingym/: __init__.py  constants.json  merge.py  merge_supervised.py  performance_DMS_benchmarks.py  performance_DMS_supervised_benchmarks.py
proteingym/baselines/PoET/: LICENSE  Makefile  README.md  pyproject.toml
proteingym/baselines/PoET-2/: MODEL_LICENSE.md  Makefile  README.md  pyproject.toml
proteingym/baselines/PoET-2/scripts/: score.py  utils.py
proteingym/baselines/PoET-2/src/poet_2/: alphabets.py
proteingym/baselines/PoET-2/src/poet_2/alphabet/: sparse_uniref_cluster2.py
proteingym/baselines/PoET-2/src/poet_2/models/: poet_2.py  poet_2_helpers.py
proteingym/baselines/PoET-2/src/poet_2/models/modules/: __init__.py  attention.py  attention_flash.py  attention_flash_fused_bias.py  embedding.py  glu.py  norm.py  packed_sequence.py  transformer.py  transformer_rotary.py
proteingym/baselines/PoET-2/src/poet_2/msa/: sampling.py
proteingym/baselines/PoET-2/third_party_licenses/: APACHE-2.0-mamba.txt  BSD-3-Clause-flash-attn.txt  MIT-x-formers.txt
proteingym/baselines/PoET/environments/poet/: environment.yml
proteingym/baselines/PoET/poet/: alphabets.py  fasta.py  utils.py
proteingym/baselines/PoET/poet/models/: poet.py
proteingym/baselines/PoET/poet/models/modules/: __init__.py  activation.py  attention.py  attention_flash.py  embedding.py  packed_sequence.py  transformer.py  transformer_rotary.py
proteingym/baselines/PoET/poet/msa/: sampling.py
proteingym/baselines/PoET/scripts/: score.py
proteingym/baselines/progen3/: compute_fitness.py  progen3_environment.yml  pyproject.toml  setup.sh
proteingym/baselines/progen3/progen3/: batch_preparer.py  config.py  generator.py  modeling.py  scorer.py  tokenizer.json  tokenizer.py
proteingym/baselines/progen3/progen3/common/: dist.py  model_loading.py
proteingym/baselines/progen3/progen3/model/: attention.py  mb_wrapper.py  moe.py
proteingym/baselines/progen3/progen3/tools/: .gitignore  generate.py  score.py  utils.py
proteingym/baselines/progen3/progen3/zero_shot/: csv_to_fasta.py  download_and_prepare.sh  run.sh
proteingym/baselines/vespag/: README.md  environment.yml  pyproject.toml
proteingym/baselines/vespag/model_weights/: state_dict_v1.pt  state_dict_v2.pt
proteingym/baselines/vespag/vespag/: __main__.py
proteingym/baselines/vespag/vespag/data/: embeddings.py
proteingym/baselines/vespag/vespag/eval/: eval.py
proteingym/baselines/vespag/vespag/models/: __init__.py  cnn.py  fnn.py  utils.py
proteingym/baselines/vespag/vespag/runner/: predict.py
proteingym/baselines/vespag/vespag/training/: dataset.py  train.py  trainer.py
proteingym/baselines/vespag/vespag/utils/: __init__.py  mutations.py  style.py  type_hinting.py  utils.py
proteingym/utils/: data_utils.py  download.py  msa_utils.py  scoring_utils.py  weights.py
reference_files/: DMS_indels.csv  DMS_substitutions.csv  clinical_indels.csv  clinical_substitutions.csv  reference_files_description.md
scripts/: zero_shot_config.sh
scripts/scoring_DMS_supervised/: merge_all_scores.sh  performance_indels.sh  performance_substitutions.sh
scripts/scoring_DMS_zero_shot/: calc_weights_eve.sh  evotune_UniRep_substitutions.sh  merge_all_scores.sh  merge_all_scores_indels.sh  performance_indels.sh  performance_substitutions.sh  scoring_AIDO.Protein-RAG-proteingym-dms-zeroshot.sh  scoring_AIDO.Protein-RAG.sh  scoring_CARP_substitutions.sh  scoring_DeProt_substitutions.sh  scoring_ESCOTT_substitutions.sh  scoring_ESM1b_substitutions.sh  scoring_ESM1v_substitutions.sh  scoring_ESM2_substitutions.sh  scoring_ESM3_substitutions.sh  scoring_ESMC_substitutions.sh  scoring_ESM_IF1_substitutions.sh  scoring_EVE_substitutions.sh  scoring_EVmutation_substitutions.sh  scoring_GEMME_substitutions.sh  scoring_HMM_indels.sh  scoring_MIF_substitutions.sh  scoring_MSA_transformer_substitutions.sh  scoring_MULAN_substitutions.sh  scoring_PoET_2_indels.sh  scoring_PoET_2_substitutions.sh  scoring_PoET_indels.sh  scoring_PoET_substitutions.sh  scoring_ProREM_substitutions.sh  scoring_ProSST_substitutions.sh  scoring_Progen2_indels.sh  scoring_Progen2_substitutions.sh  scoring_ProtGPT2_indels.sh  scoring_ProtGPT2_substitutions.sh  scoring_ProtREM_substitutions.sh  scoring_RITA_indels.sh  (+23 more)
(+371 files in other folders)
