[project]
authors = [
  { name = "Tristan Bepler", email = "tbepler@gmail.com" },
  { name = "Timothy Fei Truong Jr", email = "ttruong@ne47.bio" },
]
dependencies = [
  "torch<2.7",
  "flash-attn @ https://github.com/OpenProteinAI/flash-attention/releases/download/v2.6.3-alibi-as-bh-bias-16/flash_attn-2.6.3+cu118torch2.6cxx11abiFALSE-cp310-cp310-linux_x86_64.whl",
  "numpy>=2.2.5,<3",
  "scipy>=1.15.2,<2",
  "pandas>=2.2.3,<3",
  "scikit-learn>=1.6.1,<2",
  "matplotlib>=3.10.1,<4",
  "seaborn>=0.13.2,<0.14",
  "tqdm>=4.67.1,<5",
  "pydantic>=2.11.4,<3",
  "pyarrow>=20.0.0,<21",
  "ipykernel>=6.29.5,<7",
  "pyzstd>=0.16.2,<0.17",
  "gpytorch>=1.14,<2",
  "numba>=0.61.2,<0.62",
  "openprotein-python>=0.7.0,<0.8",
  "setuptools>=80.9.0,<81",
  "xformers==0.0.29.post3",
  "boto3>=1.38.27,<2",
  "ray[data,train,tune,serve]>=2.46.0,<3",
]
name = "PoET-2"
requires-python = ">=3.10,<3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
"Homepage" = "https://github.com/OpenProteinAI/PoET-2"
"Bug Tracker" = "https://github.com/OpenProteinAI/PoET-2/issues"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
poet_2 = { path = ".", editable = true }

[tool.pixi.pypi-options]
index-strategy = "unsafe-best-match"
extra-index-urls = ["https://download.pytorch.org/whl/cu118"]

[tool.pixi.activation.env]
TRITON_PTXAS_PATH = "$CONDA_PREFIX/lib/python3.10/site-packages/torch/bin/ptxas"

[tool.pixi.tasks]

[tool.black]
line-length = 88
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
skip = [
  '.eggs',
  '.git',
  '.hg',
  '.mypy_cache',
  '.nox',
  '.pants.d',
  '.tox',
  '.venv',
  '_build',
  'buck-out',
  'build',
  'dist',
  'node_modules',
  'venv',
]
skip_gitignore = true

[tool.pyright]
typeCheckingMode = "basic"
