[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "PoET"
authors = [
    {name="Tristan Bepler", email="tbepler@gmail.com"},
    {name="Timothy Fei Truong Jr", email="ttruong@ne47.bio"},
]
description = "PoET: A generative model of protein families as sequences-of-sequences"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies=[]

[tool.setuptools]
packages = ["poet"]

[project.urls]
"Homepage" = "https://github.com/OpenProteinAI/PoET"
"Bug Tracker" = "https://github.com/OpenProteinAI/PoET/issues"